force-app/main/default/objects/SPEN_ContactNumberEmailStaging__c/SPEN_ContactNumberEmailStaging__c.object-meta.xml
<CustomObject>
    <description>SPEN_ContactNumberEmailStaging will be staging for contact numbers and Email</description>
    <label>Contact Number Email Staging</label>
    <nameField>
        <displayFormat>CNE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Number Email Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>