force-app/main/default/objects/SPEN_ContactNumberEmailStaging__c/fields/SPEN_NumberOrEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NumberOrEmail__c</fullName>
    <label>NumberOrEmail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>