force-app/main/default/objects/SPEN_ContactNumberEmailStaging__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_NumberOrEmail__c</columns>
    <columns>SPEN_ExternalId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SPEN_SyncStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/16/2023 12:00 AM</value>
    </filters>
    <label>Today</label>
</ListView>